[package]
name = "ecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rpassword = "7.2.0"
argon2 = "0.4.1"
argon_hash_password = "0.1.0"
rand_core = "0.6.4"
aes-gcm = { version = "0.10.1", features = ["stream"] }
generic-array = "0.14.6"
