[package]
name = "ecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rpassword = "7.2.0"
argon2 = "0.4.1"
argon_hash_password = "0.1.2"
rand = "0.8.5"
zeroize = "1.5.7"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
